samples/_failures_safe/1761373905_50e724_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d6395055.c: In function ‘main’:
./samples/SAFE/__tmp_d6395055.c:162:13: error: expected expression at end of input
  162 |             case
      |             ^~~~
./samples/SAFE/__tmp_d6395055.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6395055.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d6395055.c:162:13: error: expected declaration or statement at end of input
